--- a/angularHEFE/src/app/components/sala/sala.component.html
+++ b/angularHEFE/src/app/components/sala/sala.component.html
@@ -8,7 +8,7 @@
     <h2>{{room.nombre}}</h2>
     <span class="date" >Codigo: {{room.id}} </span>
     <span class="date" *ngIf="room.maxParticipantes">
-        Participantes: 1/{{room.maxParticipantes}}
+        Participantes: {{numberMembers}} / {{room.maxParticipantes}}
     </span>
     <a (click)="detailsRoom()">Ver detalles</a>
 
