--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -52,7 +52,7 @@
 
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No hay miembro en la sala con llamado: "{{input.value}}"</td>
+            <td class="mat-cell" colspan="4" align="center">No hay miembro en la sala con llamado: "{{input.value}}"</td>
           </tr>
         </table>
     </div>
