--- a/angularHEFE/src/app/components/header/header.component.html
+++ b/angularHEFE/src/app/components/header/header.component.html
@@ -43,7 +43,8 @@
       <h3>HIPER <span>EFE</span></h3>
     </div>
     <div class="right_area">
-      <a (click)="singOut()" class="logout_btn">Cerrar Sesion</a>
+      <a (click)="singOut()" class="logout_btn">Cerrar Session <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+      
     </div>
   </header>
 
