--- a/angularHEFE/src/app/components/details-room/details-room.component.css
+++ b/angularHEFE/src/app/components/details-room/details-room.component.css
@@ -14,7 +14,8 @@
 
 .tableDetails {
   background: transparent !important;
-
+  margin-left: 10%;
+  width: 80%;
 }
 
 .tableDetails td {
@@ -22,7 +23,7 @@
   border-bottom: white solid 3px;
 }
 
-.tableDetails td img{
+.tableDetails td img {
   width: 50px;
   height: 50px;
   border-radius: 25px;
@@ -48,6 +49,20 @@
   border-radius: 20px;
 }
 
+.dataroom h3 {
+  color: white;
+  text-align: center;
+  font-size: 27px;
+  margin-bottom: 0px;
+}
+
+.dataroom p{
+  color: white;
+  text-align: right;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
 .labelFilter {
   color: white;
 }
@@ -55,6 +70,7 @@
 .titleDetails {
   color: white;
   text-align: center;
+  font-size: 25px;
 }
 
 .codeRoom {
@@ -65,6 +81,7 @@
   color: white;
   text-align: right;
   font-size: 13px;
+  margin-bottom: 0px;
 }
 
 .codeRoom h4 span {
