--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -7,8 +7,14 @@
   <div class="content">
     <div class="contentDetails">
         <mat-form-field class="searchMember">
+          <div class="dataroom" *ngIf="dataRoom">
+            <h3> {{dataRoom.nombre}} </h3>
+          </div>
           <div class="codeRoom">
             <h4>Codigo Sala: <span> {{codeRoom}} </span> </h4>
+          </div>
+          <div class="dataroom" *ngIf="dataRoom">
+            <p>{{numberMembersActive}} / {{dataRoom.maxParticipantes}} </p>
           </div>
           <h2 class="titleDetails">Integrante de la sala</h2>
           <input matInput (keyup)="applyFilter($event)" placeholder="Nombre..." #input>
@@ -18,7 +24,7 @@
 
           <!-- Position Column -->
           <ng-container matColumnDef="photoURL">
-            <th mat-header-cell *matHeaderCellDef> Foto de Perfil </th>
+            <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
               <img src="{{element.photoURL}}" onError="this.src='assets/images/userDefault.svg'"></td>
           </ng-container>
