--- a/angularHEFE/src/assets/css/styles.css
+++ b/angularHEFE/src/assets/css/styles.css
@@ -755,75 +755,9 @@ textarea {
   padding: 0px;
 }
 
-.article-item {
-  width: 100%;
-  border-bottom: 1px solid #eee;
-  padding-bottom: 20px;
-  padding-top: 20px;
-  text-align: left;
-}
 
-.article-item .image-wrap {
-  width: 130px;
-  height: 130px;
-  overflow: hidden;
-  float: left;
-  margin-right: 15px;
-  border: 1px solid #ccc;
-}
 
-.article-item .image-wrap img {
-  height: 100%;
-  text-align: center;
-}
 
-.article-item h2 {
-  display: block;
-  width: 100%;
-  padding: 0px;
-  margin: 0px;
-  margin-bottom: 7px;
-}
-
-.article-item .date {
-  display: block;
-  width: 100%;
-  color: rgb(124, 121, 121);
-}
-
-.article-item a {
-  display: block;
-  color: #444;
-  text-decoration: none;
-  margin-top: 10px;
-}
-
-.article-item a:hover {
-  text-decoration: underline;
-}
-
-.subheader {
-  font-size: 38px;
-  border-bottom: 1px solid #eee;
-  padding-bottom: 5px;
-}
-
-.article-datail .image-wrap {
-  float: none;
-  width: 100%;
-  height: 300px;
-}
-
-.article-datail .image-wrap img {
-  width: 100%;
-  height: auto;
-}
-
-.article-datail .subheader {
-  margin-top: 15px;
-  margin-bottom: 0px;
-  border: none;
-}
 
 
 /*HACIENDO RESPONSIVE*/
@@ -1506,12 +1440,14 @@ ul li a:hover {
 
 .home-user .article-item {
   width: 100%;
-  border-bottom: 1px solid #eee;
-  padding-bottom: 20px;
   padding-top: 20px;
   text-align: left;
   margin-left: -70px;
-  margin-top: 20px;
+}
+.home-user  .article-item mat-card {
+  border-radius: 20px;
+  background: #0c0f38;
+  border:  1px solid #ccc;
 }
 
 .home-user .article-item .image-wrap {
