Mini Menu arreglado

--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -15,9 +15,26 @@
           </div>
           <div class="dataroom" *ngIf="dataRoom">
             <p>{{numberMembersActive}} / {{dataRoom.maxParticipantes}} </p>
+            <div class="worldVirtual">
+              <button (click)="prueba()">
+                <img src="../../../assets/images/virtual-reality.svg" alt="Mundo Virtual">
+                <p>Mundo Virtual</p>
+              </button>
+              <button>
+                <img src="../../../assets/images/temas.svg" alt="Mundo Virtual">
+                <p>Temas</p>
+              </button>
+              <button>
+                <img src="../../../assets/images/grupo.svg" alt="Mundo Virtual">
+                <p>Integrantes</p>
+              </button>
+            </div>
           </div>
+          
           <h2 class="titleDetails">Integrante de la sala</h2>
-          <input matInput (keyup)="applyFilter($event)" placeholder="Nombre..." #input>
+          <div class="itemSearch">
+            <input matInput (keyup)="applyFilter($event)" placeholder="Nombre..." #input>
+          </div>
         </mat-form-field>
 
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 tableDetails">
