--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -17,7 +17,7 @@
             <div class="dataroom" *ngIf="dataRoom">
               <p>{{numberMembersActive}} / {{dataRoom.maxParticipantes}} </p>
               <div class="worldVirtual">
-                <button (click)="prueba()">
+                <button (click)="getListTopics()">
                   <img src="../../../assets/images/virtual-reality.svg" alt="Mundo Virtual">
                   <p>Mundo Virtual</p>
                 </button>
@@ -77,7 +77,10 @@
 
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4" align="center">No hay miembro en la sala con llamado: "{{input.value}}"</td>
+            <td class="mat-cell" colspan="4" align="center">
+              <div *ngIf="!numberMembersActive == 0"> No hay miembro en la sala con llamado: "{{input.value}}"</div>
+              <div *ngIf="numberMembersActive == 0"> Aun no hay integrantes en esta sala </div>
+            </td>
           </tr>
         </table>
     </div>
