--- a/angularHEFE/src/app/components/vr/lobby/scene/scene.component.html
+++ b/angularHEFE/src/app/components/vr/lobby/scene/scene.component.html
@@ -68,7 +68,7 @@
       </a-entity>
 
       <a-entity id="btnExit" position="0 -2 0.1" geometry="primitive: plane; width: 3; height: 1.3;" scale="1 1 1"
-                material="color: blue" 
+                material="color: blue" (click)="exitLobby()"
         animation__mouseleave="dur: 80; from: 1.04 1.04 1.04; property: scale; startEvents: mouseleave;
               pauseEvents: mouseenter; resumeEvents: ; to: 1 1 1" 
         animation__scaledown="property: scale; from: 1.2 1.2 1.2; to: 1 1 1; dur: 100; autoplay: false; easing:
