--- a/angularHEFE/src/assets/css/styles.css
+++ b/angularHEFE/src/assets/css/styles.css
@@ -1427,6 +1427,7 @@ ul li a:hover {
   text-transform: uppercase;
   font-size: 15px;
   color: white;
+  text-align: center;
   margin: 0px;
   padding-bottom: 10px;
   margin-bottom: 10px;
