Arreglos de Bugs

--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -37,7 +37,7 @@
             </div>
           </div>
           
-          <h2 class="titleDetails">Integrante de la sala</h2>
+          <h2 class="titleDetails">Integrantes de la sala</h2>
           <div class="itemSearch">
             <input matInput (keyup)="applyFilter($event)" placeholder="Nombre..." #input>
           </div>
