--- a/angularHEFE/src/app/components/details-room/details-room.component.css
+++ b/angularHEFE/src/app/components/details-room/details-room.component.css
@@ -2,6 +2,10 @@
   background: red;
 }
 
+.divButtonDelete{
+  margin: 3px;
+}
+
 .home-user .contentDetails {
   height: 100vh;
   background: #181818;
@@ -94,6 +98,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
+  margin-top: -35px;
 }
 
 .worldVirtual img{
