--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -68,10 +68,12 @@
           <ng-container matColumnDef="symbol" *ngIf="typeUser">
             <th mat-header-cell *matHeaderCellDef> Eliminar </th>
             <td mat-cell *matCellDef="let element">
-              <button (click)="prueba(element)" class="buttonDelete" mat-fab color="primary"
-                aria-label="Example icon button with a delete icon">
-                <mat-icon>delete</mat-icon>
-              </button>
+              <div class="divButtonDelete">
+                <button (click)="prueba(element)" class="buttonDelete" mat-fab color="primary"
+                  aria-label="Example icon button with a delete icon">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </div>
           </ng-container>
 
 
