--- a/angularHEFE/src/assets/css/styles.css
+++ b/angularHEFE/src/assets/css/styles.css
@@ -1199,6 +1199,7 @@ ul li a:hover {
   width: 100%;
   height: 30px;
   box-sizing: unset !important;
+  z-index: 5000;
 }
 
 .home-user .left_area h3 {
