--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -69,7 +69,7 @@
             <th mat-header-cell *matHeaderCellDef> Eliminar </th>
             <td mat-cell *matCellDef="let element">
               <div class="divButtonDelete">
-                <button (click)="removeStudentRoom(element)" class="buttonDelete" mat-fab color="primary"
+                <button (click)="reasonDelete(element)" class="buttonDelete" mat-fab color="primary"
                   aria-label="Example icon button with a delete icon">
                   <mat-icon>delete</mat-icon>
                 </button>
