Envio de correo de expulsion funcional

--- a/backend/templates/deleteStudent.hbs
+++ b/backend/templates/deleteStudent.hbs
@@ -18,7 +18,7 @@
 
 <body>
     <img src="https://www.acciona.com/media/1570746/el-salvador.jpg"></img>
-    <p>Hola, {{Nombre}}</p>
+    <p>Hola,</p>
     <p>Usted solicitó un restablecimiento de contraseña para su cuenta</p>
     <p>El SRPD te a proporcionado un enlace de recuperación, por favor vaya a la seguiente dirección de internet</p>
     
