--- a/angularHEFE/src/assets/css/styles.css
+++ b/angularHEFE/src/assets/css/styles.css
@@ -10,9 +10,10 @@ div.container {
   width: 95%;
   padding-left: 5%;
 }
-.inputs-radious{
+
+.inputs-radious {
   margin-top: 15px;
-  background:  #979de6;
+  background: #979de6;
 }
 
 .inputs-radious mat-radio-button {
@@ -29,6 +30,7 @@ table th {
   color: black;
   font-size: 15px;
 }
+
 mat-card {
   border: 2px solid #0c0f38;
 }
@@ -61,24 +63,26 @@ form.normal-form {
   display: grid;
   grid-template-columns: 60px;
   grid-template-rows: 60px 60px 30px;
-  grid-template-areas: "image" "text" "stats";
+  grid-template-areas: "image""text""stats";
   border-radius: 18px;
   background: white;
-  box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
   font-family: roboto;
   text-align: center;
   width: 400px;
   background: #0c0f38;
 
 }
+
 .card:hover {
   transform: scale(1.15);
-  box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
 }
+
 .card {
   transition: 0.5s ease;
   cursor: pointer;
-  margin:30px;
+  margin: 30px;
 }
 
 mat-grid-tile p {
@@ -93,12 +97,15 @@ mat-grid-tile p {
   margin-top: 33px !important;
   margin-left: 2px;
 }
+
 .cuenta img {
   margin-left: 30px !important;
 }
+
 .dateForm {
   margin-top: 50px;
 }
+
 .controles-container-search {
   width: 100%;
 }
@@ -111,9 +118,11 @@ mat-grid-tile p {
 
   border: 1.5px solid #0c0f38;
 }
+
 .new-room .img {
   background-size: cover;
 }
+
 .new-room .img img {
   width: 150px;
   border-radius: 100%;
@@ -129,15 +138,17 @@ mat-grid-tile p {
 mat-radio-group mat-radio-button {
   margin-left: 5px;
 }
+
 mat-form-field {
   margin-top: 10px;
 }
-mat-form-field  img{
+
+mat-form-field img {
   width: 80px;
   background-size: cover;
 }
 
-mat-horizontal-stepper{
+mat-horizontal-stepper {
   margin-top: 15px;
 }
 
@@ -1199,6 +1210,7 @@ ul li a:hover {
   width: 100%;
   height: 30px;
   box-sizing: unset !important;
+  z-index: 5000;
 }
 
 .home-user .left_area h3 {
@@ -1245,6 +1257,7 @@ ul li a:hover {
   min-height: 100vh;
   transition: 0.5s;
   transition-property: left;
+  z-index: 5000;
 }
 
 
@@ -1303,15 +1316,15 @@ ul li a:hover {
   color: #19B3D3;
 }
 
-.home-user #check:checked~ app-header .sidebar {
+.home-user #check:checked~app-header .sidebar {
   left: -190px;
 }
 
-.home-user #check:checked~ app-header .sidebar a span {
+.home-user #check:checked~app-header .sidebar a span {
   display: none;
 }
 
-.home-user #check:checked~ app-header .sidebar a {
+.home-user #check:checked~app-header .sidebar a {
   font-size: 20px;
   margin-left: 170px;
   width: 80px;
@@ -1328,7 +1341,7 @@ ul li a:hover {
   background: #181818;
 }
 
-.home-user #check:checked~ div.content {
+.home-user #check:checked~div.content {
   margin-left: 60px;
 }
 
@@ -1445,10 +1458,11 @@ ul li a:hover {
   text-align: left;
   margin-left: -70px;
 }
-.home-user  .article-item mat-card {
+
+.home-user .article-item mat-card {
   border-radius: 20px;
   background: #0c0f38;
-  border:  1px solid #ccc;
+  border: 1px solid #ccc;
 }
 
 .home-user .article-item .image-wrap {
@@ -1643,3 +1657,26 @@ ul li a:hover {
   }
 }
 
+
+/*EMPEZANDO LO RESPONSIVE*/
+@media(max-width: 900px) {
+
+
+  .home-user #check:checked~app-header .sidebar {
+    left: -250px;
+    transition: 1s;
+  }
+
+  .home-user header {
+    margin-top: -5px;
+    height: 35px;
+  }
+
+  .home-user #check:checked~div.content {
+    margin-left: 0px;
+  }
+  .home-user .content {
+    margin-left: 0px; 
+
+}
+}
